# PyCI

./: .buildinfo  .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CNAME  CONTRIBUTORS  MANIFEST.in  Makefile  README.md  README.rst  build_wrapper.py  genindex.html  install.html  intro.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation_issue.md  feature_request.md  general_issue.md  question.md
.github/workflows/: build_wheels.yml  pypi_release.yaml  python-app.yml  website.yml
_sources/: install.rst  intro.md
_sources/examples/: fanci_tutorial.ipynb  pyci_tutorial.ipynb
api/: api.html
doc/: Makefile
doc/source/: API.rst  about.rst  api.rst  conf.py  getting_started.rst  index.rst  install.rst  tutorial.rst
doci/: .gitignore  __init__.py  cext.pxd  cext.pyx  doci.cpp  doci.h  fcidump.py
doci/test/: __init__.py  test_ham.py  test_routines.py  test_wfn.py
doci/test/data/: h2o_ccpvdz.fcidump
examples/: fanci_tutorial.html  pyci_tutorial.html
fanci/: __init__.py  pccds.py
fanci/fanpt/: base_fanpt_container.py
fanci/test/: __init__.py  derivcheck.py  test_ap1rog.py  test_apig.py  test_detratio.py  test_fanpt_cont_e_free.py  test_fanpt_cont_e_param.py  test_objective_fanci.py  test_pccds.py
fanci/test/data/: h2_hf_sto6g.fcidump  li2_ccpvdz.fcidump  lih_631g.fcidump
include/: pyci.h
notebooks/: fanci_tutorial.ipynb  pyci_tutorial.ipynb  test.py
pyci/: __init__.py  cepa0.py  cext.pxd  cext.pyx  common.cpp  common.h  common.pxd  cost_ci.py  doci.cpp  doci.h  doci.pxd  doci.py  enpt2.cpp  excitation_ci.py  fcidump.py  fullci.cpp  fullci.h  fullci.pxd  fullci.py  gkci.py  hamiltonian.pxi  hci.cpp  integrals.py  onespin.cpp  pyci.cpp  pyci.h  pyci.pyx  rdm.cpp  routines.py  selected_ci.py  seniority_ci.py  solve.cpp  solve.h  solve.pxd  solve.py  sparse_op.pxi  twospin.cpp  utility.py  utils.py  wavefunction.pxi
pyci/fanci/: __init__.py  ap1rog.py  ap1rogen.py  ap1rogsdgeneralized.py  apig.py  detratio.py  fanci.py  fanpt_wrapper.py  pccds.py  pccdsspin_sen-o.py  placeholder.py
pyci/fanci/fanpt/: __init__.py  fanpt_constant_terms.py  fanpt_cont_e_free.py  fanpt_cont_e_param.py  fanpt_updater.py
pyci/fanci/test/: test_ap1rog.py  test_ap1rogsdspin.py  test_apig.py  test_detratio.py  test_objective_fanci.py  test_pccds.py
pyci/fanci/test/data/: be_ccpvdz.fcidump  h2_hf_631gdp.fcidump  li2_631g.fcidump  lih_1.5_sto6g.fcidump
pyci/fanpt/: base_fanpt_container.py  fanpt_constant_terms.py  fanpt_cont_e_free.py  fanpt_cont_e_param.py  fanpt_updater.py
pyci/include/: SpookyV2.h  binding.h  doc.h  pyci.h  pyci.pxd  sort_helper.h  sort_with_arg.h
pyci/rdm/: __init__.py  algorithms.py  conditions.py  constraints.py  tools.py
pyci/src/: SpookyV2.cpp  ap1rog.cpp  ap1rogen.cpp  binding.cpp  cepa0.cpp  common.cpp  dociwfn.cpp  enpt2.cpp  fanci.cpp  fullciwfn.cpp  genciwfn.cpp  ham.cpp  hci.cpp  nonsingletci.cpp  onespin.cpp  onespinwfn.cpp  overlap.cpp  placeholder.cpp  pyci.cpp  pyci.cpp.bak  rdm.cpp  solve.cpp  sparseop.cpp  squantop.cpp  twospin.cpp  twospinwfn.cpp  wfn.cpp
pyci/test/: __init__.py  conftest.py  test_doci_wfn.py  test_fanpt.py  test_fullci_wfn.py  test_hamiltonian.py  test_odometer.py  test_routines.py  test_wavefunction.py
pyci/test/data/: BH3.fcidump  BH_sto-3g_eq.fcidump  be_ccpvdz_spinres.npz  h10_chain_1.4_STO-6G.fcidump  h2_sto3g.fcidump  h4_2_0.0_STO-6G.fcidump  h4_sto3g.fcidump  h6_sto_3g.fcidump  h8_fcidump.fcidump
pyci/test/doci/: __init__.py  test_ham.py  test_routines.py  test_wfn.py
pyci/test/fullci/: __init__.py  test_wfn.py
pyci/test_fanci/: test_ap1rog.py  test_apig.py  test_detratio.py  test_fanpt_cont_e_free.py  test_fanpt_cont_e_param.py  test_objective_fanci.py  test_pccds.py
pyci/test_fanci/data/: lih_hf_sto6g.fcidump
src/: ap1rog.cpp  apig.cpp  enpt2.cpp  fanci.cpp  fullciwfn.cpp  genciwfn.cpp  onespinwfn.cpp  overlap.cpp  rdm.cpp  sparseop.cpp  squantop.cpp  twospinwfn.cpp
tools/: python_include_dirs.py  setup-clangd
tools/conda.recipe/: meta.yaml
tools/wheels/: cibw_before_build_linux.sh
website/: _config.yml  _toc.yml  install.rst  intro.html  intro.md  requirements.txt
website/_autosummary/: modules.rst  pyci.rst  pyci.test.rst
website/_build/.doctrees/: environment.pickle  install.doctree  intro.doctree
website/_build/.doctrees/examples/: dummy.doctree
website/_build/html/: .buildinfo  genindex.html  install.html  intro.html  objects.inv  search.html  searchindex.js
website/_build/html/_sources/: intro.md
website/_build/html/_sources/examples/: dummy.ipynb
website/_build/html/examples/: dummy.html
website/_build/jupyter_execute/examples/: dummy.ipynb
