# Core build system configuration
[build-system]
# Required packages for building the project
requires = [
    # "scikit-build-core >= 0.9.10",
    "pytest >= 6.0",                # For running tests
    "setuptools_scm>=8",            # For version management
    "setuptools>=58.0.0",           # For building the package
    "pytest>=8.0.0",                # For running tests
]
# build-backend = "scikit_build_core.build"

[project]
# Basic project metadata
name = "qc-PyCI"
description = "PyCI: A flexible quantum chemistry CI library for Python 3."
authors = [{name = "QC-Devs Community", email = "qcdevs@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
dynamic = ["version"]  # Version managed by setuptools_scm

# Project classification and requirements
keywords = [
    "quantum chemistry",
    "configuration interaction",
    "theoretical chemistry"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
]
requires-python = ">=3.9"

# Core dependencies
dependencies = [
    "numpy>=1.13",    # Required for numerical operations
    "scipy>=1.0"      # Required for scientific computations
]

# Optional feature sets
[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pycodestyle",    # For code style checking
    "pydocstyle"      # For docstring style checking
]
doc = [
    "sphinx",         # Documentation generator
    "nbsphinx",       # Jupyter notebook support in Sphinx
    "sphinx_rtd_theme" # ReadTheDocs theme
]

# Project URLs
[project.urls]
Homepage = "https://github.com/theochem/pyci"
Source = "https://github.com/theochem/pyci"
Issues = "https://github.com/theochem/pyci/issues"
Documentation = "https://pyci.qcdevs.org/"

# Package discovery and data files
[tool.setuptools]
# List of packages to include
packages = [
    "pyci",
    "pyci.fanci",
    "pyci.test",
    "pyci.fanci.test"
]

[tool.setuptools.package-data]
# Non-Python files to include in the package
"pyci" = [
    "pyci.so",        # Compiled C++ extension
    "include/*.h",    # C++ header files
    "src/*.cpp"       # C++ source files
]
"pyci.test" = [
    "data/*.fcidump", # Test input files
    "data/*.npy",     # NumPy data files
    "data/*.npz"      # Compressed NumPy data files
]

# Build configuration
[tool.scikit-build]
sdist.exclude = [
    ".github",
    "tests/data/*.fchk",
    "examples/*.fchk"
]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

# Version management configuration
[tool.setuptools_scm]
# Enable setuptools-scm for version management
